adding chart images

--- a/data_wrapper_charts_BLS.ipynb
+++ b/data_wrapper_charts_BLS.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## data was obtained by running Serdar's BLS python script - which grabs data nationwide.\n",
     "\n",
-    "monthly_unemployment = pd.read_csv('../data/bls_monthly_unemployment_by_county.csv')"
+    "monthly_unemployment = pd.read_csv('./data/bls_monthly_unemployment_by_county.csv')"
    ]
   },
   {
@@ -259,19 +259,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "0b71a105",
    "metadata": {},
    "outputs": [],
    "source": [
     "bay_area_unemployment_map = bay_area_unemployment[bay_area_unemployment[\"year\"] == 2021]\n",
     "bay_area_unemployment_map = bay_area_unemployment[bay_area_unemployment[\"month\"] == 12]\n",
-    "bay_area_unemployment_map.to_csv('../data/unemployment_bay.csv')"
+    "bay_area_unemployment_map.to_csv('./data/unemployment_bay.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d30038c6",
    "metadata": {},
    "outputs": [
@@ -402,7 +402,7 @@
        "[126 rows x 4 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "a96ae4f5",
    "metadata": {},
    "outputs": [],
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "8ea947d9",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
        "224  San Francisco County/city  2021  2021-03-01              6.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -518,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2e44a922",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
        "9            5.1            3.4  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "56c11666",
    "metadata": {},
    "outputs": [
@@ -856,7 +856,7 @@
        "3            4.0            2.6  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,13 +870,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "574cdf8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pivot_counties_2021.to_csv('../data/bls_monthly_unemployment_bay_area_2021.csv', index=False)\n",
-    "pivot_counties_2022.to_csv('../data/bls_monthly_unemployment_bay_area_2022.csv', index=False)"
+    "pivot_counties_2021.to_csv('./data/bls_monthly_unemployment_bay_area_2021.csv', index=False)\n",
+    "pivot_counties_2022.to_csv('./data/bls_monthly_unemployment_bay_area_2022.csv', index=False)"
    ]
   },
   {
@@ -894,11 +894,11 @@
    "id": "d7477ae9",
    "metadata": {},
    "source": [
-    "![title](./data/unemployment-rates-bay-area-dotchart.png)\n",
+    "![title](./imgs/unemployment-rates-bay-area-dotchart.png)\n",
     "\n",
     "## Data Wrapper chart for Bay Area unemployment rates, 2022\n",
     "\n",
-    "![title](./data/bay-area-unemployment-rates2022.png)\n"
+    "![title](./imgs/bay-area-unemployment-rates2022.png)\n"
    ]
   },
   {
@@ -906,9 +906,9 @@
    "id": "71ea1110",
    "metadata": {},
    "source": [
-    "![title](./data/bay-area-unemployment-dec-map-2021.png)\n",
+    "![title](./imgs/bay-area-unemployment-dec-map-2021.png)\n",
     "\n",
-    "![title](./data/bay-area-unemployment-rates-dec-2021-br.png)"
+    "![title](./imgs/bay-area-unemployment-rates-dec-2021-br.png)"
    ]
   },
   {
